# reactpyx

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-RESTRICTED.md  README.md  ROADMAP.md  SECURITY.md  debug_import.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: advanced-concepts.md  api-reference.md  conceptos-avanzados.md  css_integration.md  getting-started.md  guia-inicio.md  optimizacion.md
examples/: README.md  basic_component.pyx  css_frameworks_example.pyx  css_integration_demo.pyx  css_scoping_example.pyx  python313_features.pyx
my-app/: main.py  pyx.config.json
my-app/src/: App.pyx  css_helper.py  main.pyx
my-app/src/components/: Header.pyx  StyledButton.pyx
my-app/src/styles/: main.css
my-app/templates/: 404.jinja2  base.jinja2  index.jinja2
python/reactpyx/: __init__.py  __main__.py  cli.py  context.py  hooks.py  registry.py  runtime.py  server.py
src/: async_task.rs  cli.rs  compiler.rs  component_detector.rs  component_parser.rs  concurrent_rendering.rs  config.rs  css_minifier.rs  errors.rs  event_handler.rs  hmr.rs  hooks.rs  html_minifier.rs  js_minifier.rs  jsx_transformer.rs  lazy_component.rs  lib.rs  logger.rs  plugin_system.rs  precompiler.rs  suspense.rs  virtual_dom.rs
src/cli/: cli_build_project.rs  cli_create_project.rs  cli_init_project.rs  cli_install_library.rs  cli_install_plugin.rs  cli_run_server.rs  cli_test_utils.rs
src/python/: __init__.py  css_compiler.py  decorators.py  py313_compat.py
src/runtime/: client.js
templates/default/: main.py  pyproject.toml
templates/default/public/: 404.html  index.html
templates/default/public/static/: app.js  styles.css
templates/default/src/: App.pyx  index.py  main.pyx  python313_examples.py
templates/default/src/assets/: styles.css
templates/default/src/components/: About.pyx  Header.pyx  Home.pyx  SimpleEffect.pyx
templates/default/templates/: base.jinja2  index.jinja2
tests/: test_cli_integration.py  test_compile.rs  test_production_structure.py  test_py313_features.py  test_runtime_integration.py  test_security.py
vscode-extension/: README.md  language-configuration.json  package.json  reactpyx.code-snippets
vscode-extension/syntaxes/: reactpyx.tmLanguage.json
