[package]
name = "core_reactpyx"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_reactpyx"
crate-type = ["cdylib"]

[dependencies]
# Programación asíncrona y concurrencia
tokio = { version = "1.35.1", features = ["full", "fs"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tokio-util = "0.7.10"

# SWC core para análisis sintáctico y generación de código
swc_core = { version = "0.90.8", features = [
    "ecma_parser",
    "ecma_codegen",
    "ecma_ast",
    "__common",
] }

# Formato de código y análisis de árbol sintáctico
prettyplease = "0.2.16"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"

# Serialización y deserialización
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Minificación y procesamiento CSS
lightningcss = "1.0.0-alpha.50"
minifier = "0.3.0"

# Herramientas de procesamiento concurrente e hilos
rayon = "1.8.0"
futures = "0.3.29"

# Manejo de errores y utilidades
anyhow = "1.0.75"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"

# Operaciones de sistema de archivos y caché
fs_extra = "1.3.0"
parking_lot = "0.12.1"
dashmap = "5.5.3"

# Herramientas para interfaz de línea de comandos
clap = "4.4.11"
colored = "2.0.4"
indicatif = "0.17.7"

# Otras utilidades y bibliotecas de soporte
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
brotli = "3.4.0"

# Actualizamos PyO3 para soporte de Python 3.13
pyo3 = { version = "0.21.0", features = [
    "macros",
    "extension-module",
    "abi3-py38",
] }

# Biblioteca de caché
cached = "0.46.1"
syn = "2.0.39"
regex = "1.10.2"
once_cell = "1.18.0"
clap_derive = "4.4.7"
notify = "6.1.1"
blake3 = "1.5.0"
