[package]
name = "reactpyx"
version = "0.1.0"
edition = "2021"

[lib]
name = "reactpyx"
crate-type = ["cdylib"]

[dependencies]
# Asynchronous programming and concurrency
tokio = { version = "1.35.1", features = ["full", "fs"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tokio-util = "0.7.10"

# SWC core for parsing and code generation
swc_core = { version = "0.90.8", features = [
    "ecma_parser",
    "ecma_codegen",
    "ecma_ast",
    "__common",
] }

# Code formatting and syntax tree analysis
prettyplease = "0.2.31"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"

# Serialization and deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# CSS minification and processing
lightningcss = "1.0.0-alpha.68"
minifier = "0.3.0"

# Concurrent processing tools and threading
rayon = "1.8.0"
futures = "0.3.29"

# Error handling and utilities
anyhow = "1.0.75"
thiserror = "1.0.50"
log = "0.4.20"
env_logger = "0.10.1"

# File system operations and caching
fs_extra = "1.3.0"
parking_lot = "0.12.1"
dashmap = "5.5.3"

# Command-line interface tools
clap = "4.5.36"
colored = "2.0.4"
indicatif = "0.17.7"

# Other utilities and supporting libraries
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
brotli = "3.4.0"

# Updated PyO3 for Python 3.13 support
pyo3 = { version = "0.21.0", features = [
    "macros",
    "extension-module",
    "abi3-py38",        # This provides compatibility from Python 3.8 through 3.13+
] }

# Caching library
cached = "0.46.1"
syn = "2.0.39"
regex = "1.10.2"
once_cell = "1.18.0"
clap_derive = "4.4.7"
notify = "6.1.1"
blake3 = "1.5.0"
