[package]
name = "reactpyx"
version = "0.1.0"
edition = "2021"

[lib]
name = "reactpyx"
crate-type = ["cdylib"]

[dependencies]
# Asynchronous programming and concurrency
tokio = { version = "1.48.0", features = ["full", "fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
tokio-util = "0.7.13"

# SWC core for parsing and code generation
swc_core = { version = "48.0.4", features = [
    "ecma_parser",
    "ecma_codegen",
    "ecma_ast",
    "__common",
] }

# Code formatting and syntax tree analysis
prettyplease = "0.2.37"
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"

# Serialization and deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"

# CSS minification and processing
lightningcss = "1.0.0-alpha.68"
minifier = "0.3.6"

# Concurrent processing tools and threading
rayon = "1.11.0"
futures = "0.3.31"

# Error handling and utilities
anyhow = "1.0.100"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"

# File system operations and caching
fs_extra = "1.3.0"
parking_lot = "0.12.5"
dashmap = "6.1.0"

# Command-line interface tools
clap = "4.5.53"
colored = "3.0.0"
indicatif = "0.18.3"

# Other utilities and supporting libraries
html5ever = "0.36.1"
markup5ever_rcdom = "0.3.0"
brotli = "8.0.2"

# Updated PyO3 for Python 3.13 support
pyo3 = { version = "0.27.1", features = [
    "macros",
    "extension-module",
    "abi3-py38",        # This provides compatibility from Python 3.8 through 3.13+
] }

# Caching library
cached = "0.56.0"
syn = "2.0.111"
regex = "1.12.2"
once_cell = "1.21.3"
clap_derive = "4.5.28"
notify = "8.2.0"
blake3 = "1.8.2"

[dev-dependencies]
tempfile = "3.23.0"
