[build-system]
requires = ["maturin>=1.4,<1.5", "setuptools>=69.0", "wheel>=0.42"]
build-backend = "maturin"

[project]
name = "reactpyx"  # Cambiado de "core_reactpyx"
version = "0.5.1"
description = "Un framework moderno que combina React con Python y Rust"
authors = [{ name = "ReactPyx Team", email = "info@reactpyx.dev" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.9.0", "mypy>=1.5.1", "flake8>=6.1.0"]

[tool.maturin]
strip = true
cargo-extra-args = "--release"

[project.scripts]
reactpyx = "reactpyx.cli:run_cli_py"  # Cambiado de "core_reactpyx.cli:run_cli_py"
