[build-system]
requires = ["maturin>=1.10.2,<2.0", "setuptools>=69.0", "wheel>=0.42"]
build-backend = "maturin"

[project]
name = "reactpyx"
version = "0.5.1"
description = "A modern framework combining React with Python and Rust"
authors = [{ name = "ReactPyx Team", email = "info@reactpyx.dev" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "black>=25.11.0",
    "mypy>=1.18.2",
    "flake8>=7.3.0",
    "typing-extensions>=4.15.0", # For Python 3.13 typing features in older versions
]

[tool.maturin]
strip = true
cargo-extra-args = "--release"
python-source = "python"       # To include Python module sources
module-name = "reactpyx._core"

[project.scripts]
reactpyx = "reactpyx.cli:run_cli_py"
