# default/pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reactpyx_project"
version = "0.1.0"
description = "Project created with ReactPyx"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = ["reactpyx>=0.4.0", "fastapi>=0.115.0", "uvicorn>=0.30.6"]
python = ">=3.8"
